# X_IL

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
agents/: awr_agent.py
configs/: libero_config.yaml  libero_failure_config.yaml  robocasa_config.yaml
configs/agents/: awr_agent.yaml
configs/trainers/: awr_trainer.yaml
environments/dataset/: libero_dataset.py  libero_failure_rollout_dataset.py
script/awr/dec/: transformer.sh  transformer_failure_libero.sh  transformer_failure_libero_parallel_gpus.sh
script/bc/dec/: transformer_failure_libero.sh  transformer_failure_libero_parallel_gpus.sh  transformer_failure_only_libero.sh  transformer_failure_only_libero_parallel_gpus.sh
simulation/: libero_sim.py
trainers/: awr_trainer.py  base_trainer.py
