[project]
name = "X_IL"
requires-python = ">=3.10"
version = "0.1.0"
dependencies = [
    "hydra-core==1.3.2",
    "numpy",
    "wandb",
    "easydict",
    "transformers",
    "opencv-python",
    "einops",
    "thop",
    "robosuite==1.4.0",
    "bddl",
    "future",
    "matplotlib",
    "cloudpickle",
    "gym",
    "numexpr",
    "h5py",
    "torchsde",
    "torchdiffeq",
    "imageio[ffmpeg]",
    "open3d",
    "ftfy",
    "termcolor",
]


license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["description"]


[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
